--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
             <meta-data android:name="android.appwidget.provider"
-                android:resource="@xml/stackwidgetinfo" />
+                android:resource="@xml/widgetinfo" />
         </receiver>
         <service android:name="StackWidgetService"
             android:permission="android.permission.BIND_REMOTEVIEWS"
